Resize Product page image and fix bottom margin
The image was too small on lg+ viewports, and the link surrounding the
image included the bottom image, so this commit corrects those two
minor issues.

--- a/about/static/about/css/about.css
+++ b/about/static/about/css/about.css
@@ -10184,13 +10184,15 @@ form > *, form > .row {
   flex-direction: column;
   align-items: center;
 }
-.img img {
+.img a {
+  margin-bottom: 1rem;
+}
+.img a img {
   max-width: 300px;
   max-height: 275px;
   width: auto;
   height: auto;
   display: block;
-  margin-bottom: 1rem;
   box-shadow: 0px 4px 8px grey;
 }
 .img p, .img a {
@@ -10522,6 +10524,11 @@ input[type=checkbox] + p {
   #gallery > ul, #archive > ul {
     grid-template-columns: 299.67px 299.67px 299.67px;
     grid-template-columns: calc((960px - 4rem)/3 + 1px) calc((960px - 4rem)/3 + 1px) calc((960px - 4rem)/3 + 1px);
+  }
+
+  .img a img {
+    max-width: 460px;
+    max-height: 500px;
   }
 }
 @media (min-width: 1200px) {
